Fix for hvr-icons overlapping sidebar item labels

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -503,3 +503,6 @@ body {
 .nav-side-menu .panel-title .accordion-toggle .accordion-heading {
     display:block;
 }
+.hvr-icon-hang {
+    display: block;
+}
